--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,13 @@ name = "pypi"
 [packages]
 gym = "*"
 "gym[box2d]" = "*"
+matplotlib = "*"
 pybullet = "*"
 torch = "*"
-matplotlib = "*"
 
 [dev-packages]
 mypy = "*"
+jupyter = "*"
 
 [requires]
 python_version = "3.6"
