:house_with_garden: Add pylint dependency

--- a/Pipfile
+++ b/Pipfile
@@ -13,9 +13,11 @@ torch = "*"
 [dev-packages]
 mypy = "*"
 jupyter = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.6"
 
 [scripts]
 reqs = "./scripts/generate_requirements.sh"
+lint = "pylint ./policy_gradients"
