--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -11,12 +11,13 @@
 -i https://pypi.org/simple
 appnope==0.1.0; sys_platform == 'darwin' and platform_system == 'Darwin'
 argon2-cffi==20.1.0
+astroid==2.4.2; python_version >= '3.5'
 async-generator==1.10; python_version >= '3.5'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 backcall==0.2.0
 bleach==3.2.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 box2d-py==2.3.8
-cffi==1.14.3
+cffi==1.14.4
 cloudpickle==1.6.0; python_version >= '3.5'
 cycler==0.10.0
 dataclasses==0.8; python_version >= '3.6' and python_version < '3.7'
@@ -25,11 +26,12 @@ defusedxml==0.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 
 entrypoints==0.3; python_version >= '2.7'
 future==0.18.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gym[box2d]==0.17.3
-importlib-metadata==2.0.0; python_version < '3.8'
+importlib-metadata==3.1.0; python_version < '3.8'
 ipykernel==5.3.4; python_version >= '3.5'
 ipython-genutils==0.2.0
 ipython==7.16.1; python_version >= '3.3'
 ipywidgets==7.5.1
+isort==5.6.4; python_version >= '3.6' and python_version < '4.0'
 jedi==0.17.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 jinja2==2.11.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 jsonschema==3.2.0
@@ -39,8 +41,10 @@ jupyter-core==4.7.0; python_version >= '3.6'
 jupyter==1.0.0
 jupyterlab-pygments==0.1.2
 kiwisolver==1.3.1; python_version >= '3.6'
+lazy-object-proxy==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 matplotlib==3.3.3
+mccabe==0.6.1
 mistune==0.8.4
 mypy-extensions==0.4.3
 mypy==0.790
@@ -50,7 +54,7 @@ nbformat==5.0.8; python_version >= '3.5'
 nest-asyncio==1.4.3; python_version >= '3.5'
 notebook==6.1.5; python_version >= '3.5'
 numpy==1.19.4; python_version >= '3.6'
-packaging==20.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+packaging==20.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pandocfilters==1.4.3
 parso==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pexpect==4.8.0; sys_platform != 'win32'
@@ -59,27 +63,30 @@ pillow==8.0.1; python_version >= '3.6'
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8; python_full_version >= '3.6.1'
 ptyprocess==0.6.0; os_name != 'nt'
-pybullet==3.0.6
+pybullet==3.0.7
 pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyglet==1.5.0
 pygments==2.7.2; python_version >= '3.5'
+pylint==2.6.0
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyrsistent==0.17.3; python_version >= '3.5'
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyzmq==20.0.0; python_version >= '3.5'
-qtconsole==4.7.7
+qtconsole==5.0.1; python_version >= '3.6'
 qtpy==1.9.0
 scipy==1.5.4; python_version >= '3.6'
 send2trash==1.5.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 terminado==0.9.1; python_version >= '3.6'
 testpath==0.4.4
+toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 torch==1.7.0
 tornado==6.1; python_version >= '3.5'
 traitlets==4.3.3
-typed-ast==1.4.1
+typed-ast==1.4.1; python_version < '3.8' and implementation_name == 'cpython'
 typing-extensions==3.7.4.3
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
 zipp==3.4.0; python_version >= '3.6'
