:house_with_garden: Add format pipenv script

--- a/Pipfile
+++ b/Pipfile
@@ -23,3 +23,4 @@ python_version = "3.6"
 reqs = "./scripts/generate_requirements.sh"
 lint = "pylint ./policy_gradients"
 typecheck = "mypy"
+format = "black --target-version py36 ./policy_gradients"
