:seedling: Add serve script to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -24,3 +24,4 @@ reqs = "./scripts/generate_requirements.sh"
 lint = "pylint ./policy_gradients"
 typecheck = "mypy"
 format = "black --target-version py36 ./policy_gradients"
+serve = "jupyter notebook"
