--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,17 @@ description = "Implementing reinforcement learning algorithms based on policy gr
 authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.2"
+gym = {extras = ["box2d"], version = "^0.18.0"}
+matplotlib = "^3.3.4"
+pybullet = "^3.0.8"
+torch = "^1.7.1"
 
 [tool.poetry.dev-dependencies]
+black = "^20.8b1"
+mypy = "^0.800"
+jupyter = "^1.0.0"
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
